fix: configure CORS to read from CORS_ALLOWED_ORIGINS environment variable